# aider

./: .aider.conf.yml  .aider.input.history  .aider.litellm.yml  .aider.model.metadata.json  .aider.model.metadata.yml  .aider.model.settings.yml  .gitignore  .litellm.config.yaml  README.md  STACKSPOT.md  TODO.md  pyproject.toml  sync_with_upstream.sh  test.py  test_stackspot.py
.aider/: .litellm.config.yaml
.github/workflows/: test.yml
aider/: __init__.py  args.py  commands.py  conversation_manager.py  diffs.py  history.py  io.py  linter.py  litellm_init.py  llm.py  logging.py  main.py  mdstream.py  models.py  repo.py  repo_map.py  repomap.py  report.py  run_cmd.py  scrape.py  utils.py  voice.py  watch.py
aider/coders/: architect_coder.py  base_coder.py  editblock_coder.py  help_prompts.py
aider/models/: __init__.py  lazy_litellm.py  model.py  model_info_manager.py  settings.py
aider/providers/: __init__.py  stackspot.py  stackspot_config.py  stackspot_constants.py  stackspot_errors.py
aider/resources/: model-metadata.json  model-settings.yml  stackspot.json
aider/website/docs/llms/: stackspot.md
benchmark/: benchmark.py  over_time.py  plots.py  problem_stats.py  refactor_tools.py  rungrid.py
prompts/: act-work-with-stackspot.md
requirements/: test.txt
scripts/: hello_world_stackspot.py  setup_stackspot.sh  test_stackspot.sh
tests/: test_stackspot.py
tests/providers/: test_stackspot.py
